@@ -3,6 +3,11 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/branches/1.8/changelog
 
 Version 1.8.4+svn:
+ * Campaigns:
+   * Legend of Wesmere:
+     * Added another keep in scenario 14.
+   * Sceptre of Fire:
+     * Fixed bug #16406: Fixed broken AI in first scenario.
  * Language and i18n:
    * Updated translations: Indonesian, Japanese.
 
